[bug 1013527] Fixes allignment alignment issue of arrow icon in AOA reply box

--- a/kitsune/sumo/static/less/customercare.less
+++ b/kitsune/sumo/static/less/customercare.less
@@ -273,9 +273,8 @@
 
 #initial-tweet #arrow {
   border: 0;
-  left: 75px;
-  position: absolute;
-  top: 60px;
+  margin-left:10px;
+  margin-top:10px;
 }
 
 #reply-container h4 {
